@@ -184,20 +184,20 @@ static Image *ReadWEBPImage(const ImageInfo *image_info,
     Read WEBP file.
   */
   length = (size_t) GetBlobSize(image); /* FIXME, does not work with stream */
-  stream=MagickAllocateArray(unsigned char *,
-                             length,sizeof(*stream));
+  stream=MagickAllocateResourceLimitedArray(unsigned char *,
+                                            length,sizeof(*stream));
   if (stream == (unsigned char *) NULL)
     ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,image);
 
   count=(long) ReadBlob(image,length,(char *) stream);
   if (count != (size_t) length)
     {
-      MagickFreeMemory(stream);
+      MagickFreeResourceLimitedMemory(stream);
       ThrowReaderException(CorruptImageError,InsufficientImageDataInFile,image);
     }
   if ((webp_status=WebPGetFeatures(stream,length,&stream_features)) != VP8_STATUS_OK)
     {
-      MagickFreeMemory(stream);
+      MagickFreeResourceLimitedMemory(stream);
 
       switch (webp_status)
         {
@@ -250,14 +250,14 @@ static Image *ReadWEBPImage(const ImageInfo *image_info,
   image->matte=(stream_features.has_alpha ? MagickTrue : MagickFalse);
   if (image->ping)
     {
-      MagickFreeMemory(stream);
+      MagickFreeResourceLimitedMemory(stream);
       CloseBlob(image);
       StopTimer(&image->timer);
       return(image);
     }
   if (CheckImagePixelLimits(image, exception) != MagickPass)
     {
-      MagickFreeMemory(stream);
+      MagickFreeResourceLimitedMemory(stream);
       ThrowReaderException(ResourceLimitError,ImagePixelLimitExceeded,image);
     }
   if (image->matte)
@@ -270,7 +270,7 @@ static Image *ReadWEBPImage(const ImageInfo *image_info,
                                            &stream_features.height);
   if (pixels == (unsigned char *) NULL)
     {
-      MagickFreeMemory(stream);
+      MagickFreeResourceLimitedMemory(stream);
       ThrowReaderException(CoderError,NoDataReturned,image);
     }
 
@@ -339,7 +339,7 @@ static Image *ReadWEBPImage(const ImageInfo *image_info,
   */
   free(pixels);
   pixels=(unsigned char *) NULL;
-  MagickFreeMemory(stream);
+  MagickFreeResourceLimitedMemory(stream);
   CloseBlob(image);
   StopTimer(&image->timer);
   return(image);
@@ -726,7 +726,7 @@ static unsigned int WriteWEBPImage(const ImageInfo *image_info,Image *image)
         Allocate memory for pixels.
       */
       per_column = MagickArraySize(MagickArraySize(4,image->rows),sizeof(*pixels));
-      pixels=MagickAllocateArray(unsigned char *,image->columns,per_column);
+      pixels=MagickAllocateResourceLimitedArray(unsigned char *,image->columns,per_column);
       if (pixels == (unsigned char *) NULL)
         ThrowWriterException(ResourceLimitError,MemoryAllocationFailed,image);
 
@@ -757,7 +757,7 @@ static unsigned int WriteWEBPImage(const ImageInfo *image_info,Image *image)
         webp_status=WebPPictureImportRGB(&picture,pixels,3*picture.width);
       else
         webp_status=WebPPictureImportRGBA(&picture,pixels,4*picture.width);
-      MagickFreeMemory(pixels);
+      MagickFreeResourceLimitedMemory(pixels);
     }
 
   if (webp_status)
